k8s/countly-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-api
  namespace: countly
  labels:
    app: countly-api
    branch: newarchitecture
    component: api
spec:
  selector:
    app: countly-api
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-api
  namespace: countly
  labels:
    app: countly-api
    branch: newarchitecture
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: countly-api
  template:
    metadata:
      labels:
        app: countly-api
        branch: newarchitecture
        component: api
    spec:
      tolerations:
      - key: countly
        operator: Equal
        value: dedicated
        effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - countly-api
              topologyKey: kubernetes.io/hostname
      containers:
      - name: countly-api
        image: gcr.io/countly-dev-313620/newarch/countly-unified:test-25
        imagePullPolicy: Always
        command: ["npm", "run", "start:api"]
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "2.5Gi"
            cpu: "1"
          limits:
            memory: "2.5Gi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 120
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: logs
          mountPath: /opt/countly/log
      volumes:
      - name: tmp
        emptyDir: {}
      - name: logs
        emptyDir: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
